--- a/index.html
+++ b/index.html
@@ -8,14 +8,11 @@
 </head>
 <body>
     <div class="container">
-        <h1>News finder</h1>
+        <h1>GitHub Repo finder</h1>
 
         <form id="js-form">
-            <label for="search-term">Search term</label>
+            <label for="search-term">Search Term</label>
             <input type="text" name="search-term" id="js-search-term" required>
-
-            <label for="max-results">Maximum results to return</label>
-            <input type="number" name="max-results" id="js-max-results" value="10">
 
             <input type="submit" value="Go!">
         </form>
